--- a/src/styles/partials/_colors.scss
+++ b/src/styles/partials/_colors.scss
@@ -3,7 +3,7 @@ $primary-black: #323232;
 /// BrainFlix-Blue
 $primary-blue: #0095FF;
 /// Silver
-$primary-gray: $AFAFAF;
+$primary-gray: #AFAFAF;
 /// White
 $primary-white: #FFFFFF;
 /// BrainFlix-DarkBlack
