--- a/src/components/SearchBar/SearchBar.scss
+++ b/src/components/SearchBar/SearchBar.scss
@@ -1,3 +1,5 @@
+@use '../../styles/partials/colors';
+
 .search-bar{
     // border: 1px solid gray;
     // border-radius: 4px;
@@ -12,15 +14,15 @@
     }
 
     &__field{
-        background-color: #FAFAFA;
-        border: 1px solid #E1E1E1;
+        background-color: colors.$secondary-white;
+        border: 1px solid colors.$secondary-gray;
         border-radius: 4px;
         text-indent: 1.8rem;
         width: 100%;
         height: 2.25rem;
 
         &::placeholder{
-            color: black;
+            color: colors.$secondary-black;
         }
     }
 }
