--- a/src/components/CtaButton/CtaButton.scss
+++ b/src/components/CtaButton/CtaButton.scss
@@ -1,19 +1,22 @@
 @use '../../styles/partials/colors';
+@use '../../styles/partials/fonts';
 
 .cta-button{
-    line-height: 1;
+    @include fonts.labelsbuttons; 
     color: colors.$primary-white;
     background-color: colors.$primary-blue;
     border: none;
     border-radius: 4px;
+    position: relative;
     width: 100%;
     height: 2.5rem;
-    position: relative;
 
     &__icon{
         position: absolute;
-        left: 0.25rem;
+        left: 0.5rem;
         top: 50%;
+        width: 1.25rem;
+        height: 1.25rem;
         transform: translate(0,-50%);
     }
 }
