--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -1,7 +1,13 @@
+@use './colors';
+
 @mixin flexbox($justify-content:null,$align-items:null,$direction: null, $wrap:null){
     display: flex;
     justify-content: $justify-content;
     align-items: $align-items;
     flex-direction: $direction;
     flex-wrap: $wrap;
+}
+
+@mixin divider{
+    border-bottom: 1px solid colors.$secondary-gray;
 }
