--- a/src/components/VideoInfo/VideoInfo.scss
+++ b/src/components/VideoInfo/VideoInfo.scss
@@ -9,8 +9,7 @@
     &__title{
         @include fonts.pageheader;
         @include mixins.divider;
-        padding-top: 0.125rem;
-        padding-bottom: 0.875rem;
+        padding: 0.125rem 0 0.875rem;
 
         @include tablet{
             border: none;
@@ -30,9 +29,9 @@
         }
 
         &--strong{
-            color: colors.$secondary-black;
             font-weight: 600;
             font-size: 0.875rem;
+            color: colors.$secondary-black;
             
             @include tablet{
                 font-size: 0.9688rem;
@@ -64,32 +63,29 @@
 
     &__bottom-row{
         padding-top: 1rem;
-        display: flex;
-        justify-content: space-between;
+        @include mixins.flexbox(space-between);
         @include mixins.divider;
         
         @include tablet{
             padding-top: 0.5rem;
         }
+
         @include desktop{
             padding-right: 1.375rem;
         }
     }
 
     &__left{
-        display: flex;
-        flex-wrap: wrap;
+        @include mixins.flexbox($wrap: wrap);
     }
 
     &__right{
         margin-left: 2rem;
-        display: flex;
-        flex-wrap: wrap;
+        @include mixins.flexbox($wrap: wrap);
     }
 
     &__description{
-        padding-top: 1rem;
-        padding-bottom: 1rem;
+        padding: 1rem 0 1rem;
         
         @include tablet{
             padding-top: 1.5rem;
