--- a/src/styles/partials/_colors.scss
+++ b/src/styles/partials/_colors.scss
@@ -9,8 +9,10 @@ $primary-white: #FFFFFF;
 /// BrainFlix-DarkBlack
 $secondary-black: #000000;
 /// BrainFlix-DarkBlue
-$secondary-blue: #0065FF;
+$secondary-blue: #0065AD;
 /// Mercury
 $secondary-gray: #E1E1E1;
 /// Alabaster
 $secondary-white: #FAFAFA;
+
+$error-color: #D22D2D;
