--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -11,3 +11,8 @@
 @mixin divider{
     border-bottom: 1px solid colors.$secondary-gray;
 }
+
+/// 4px rounded corners, which are very common amoungst BrainFlix elements
+@mixin rounded-corners(){
+    border-radius: 4px;
+}
