--- a/src/components/CtaButton/CtaButton.scss
+++ b/src/components/CtaButton/CtaButton.scss
@@ -1,23 +1,34 @@
+@use '../../styles/partials/breakpoints' as *;
 @use '../../styles/partials/colors';
 @use '../../styles/partials/fonts';
+@use '../../styles/partials/mixins';
 
 .cta-button{
     @include fonts.labelsbuttons; 
     color: colors.$primary-white;
     background-color: colors.$primary-blue;
     border: none;
-    border-radius: 4px;
+    @include mixins.rounded-corners();
     position: relative;
     width: 100%;
     height: 2.5rem;
     cursor: pointer;
 
+    @include tablet{
+        width: 9.375rem;
+    }
+
+    &:hover{
+        background-color: colors.$secondary-blue;
+    }
+
     &__icon{
+        margin: auto;
         position: absolute;
+        top: 0;
+        bottom: 0;
         left: 0.5rem;
-        top: 50%;
         width: 1.25rem;
         height: 1.25rem;
-        transform: translate(0,-50%);
     }
 }
