--- a/src/components/Logo/Logo.scss
+++ b/src/components/Logo/Logo.scss
@@ -1,22 +1,25 @@
+@use '../../styles/partials/colors';
 @use '../../styles/partials/mixins';
 
 .logo{
+    max-height: 1.5625rem;
     @include mixins.flexbox(center,center);
 
     &__icon-container{
-        background-color: #0095FF;
+        background-color: colors.$primary-blue;
         border-radius: 0.25rem / 0.5rem;
         position: relative;
         width: 2rem;
         height: 1.5rem;
-        
     }
 
     &__icon{
+        margin: auto;
         position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%,-50%);
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
         width: 0.625rem;
     }
 
