--- a/src/components/SearchBar/SearchBar.scss
+++ b/src/components/SearchBar/SearchBar.scss
@@ -1,16 +1,22 @@
+@use '../../styles/partials/breakpoints' as *;
 @use '../../styles/partials/colors';
 @use '../../styles/partials/fonts';
-@use '../../styles/partials/breakpoints' as *;
+@use '../../styles/partials/mixins';
+
 
 .search-bar{
     position: relative;
+    height: 2.5rem;
 
     &__icon{
+        margin: auto;
         position: absolute;
-        top: 50%;
+        top: 0;
+        bottom: 0;
         left: 0.75rem;
+        width: 1rem;
         height: 1rem;
-        transform: translate(0,-50%);
+        // transform: translate(0,-50%);
 
         @include tablet{
             left: 1rem;
@@ -21,7 +27,7 @@
         font-size: 0.75rem;
         background-color: colors.$secondary-white;
         border: 1px solid colors.$secondary-gray;
-        border-radius: 4px;
+        @include mixins.rounded-corners();
         text-indent: 2rem;
         width: 100%;
         height: 2.25rem;
