--- a/src/components/Avatar/Avatar.scss
+++ b/src/components/Avatar/Avatar.scss
@@ -6,10 +6,11 @@
     background-color: colors.$secondary-gray;
     object-fit: cover;
     object-position: 20%;
+    overflow: hidden;
     border-radius: 50%;
+    position: relative;
     width: 2.25rem;
     height: 2.25rem;
-    position: relative;
     display: block;
 
     @include tablet{
@@ -17,13 +18,15 @@
         height: 2.5rem;
     }
 
-    //Image placeholder (Covers missing image icon)
-    &::before{
-        content: '';
-        border-radius: 50%;
-        display: block;
+    /// Broken or missing images will display an empty container with a mercury background
+    &::after{
+        content: ' ';
         background-color: colors.$secondary-gray;
         position: absolute;
-        inset: 0;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: block;    
     }
 }
