--- a/src/components/CommentForm/CommentForm.scss
+++ b/src/components/CommentForm/CommentForm.scss
@@ -6,25 +6,43 @@
 //# Comment Form
 .comment-form{
     @include mixins.divider;
-    padding-bottom: 1rem;
+    padding: 0 0 1rem;
     @include mixins.flexbox($align-items:flex-start);
 
     @include tablet{
-        padding-bottom: 1.75rem;
+        padding: 0 0 1.75rem;
     }
 
     @include desktop{
-        padding-left: 0.625rem;
-        padding-bottom: 1.5rem;
-        padding-right: 1.5rem;
+        padding: 0 1.5rem 1.5rem 0.625rem;
     }
 
-    &__avatar-wrapper{
-        padding-top: 1.5em;
-        margin-right: 1rem;
+    &__container{
+        &--avatar{
+            padding: 1.5rem 1rem 0 0;
 
-        @include desktop{
-            margin-right: 2.25rem;
+            @include desktop{
+                padding: 1.5rem 2.25rem 0 0;
+            }
+        }
+
+        &--commentbox{
+            padding: 0 0 1rem;
+
+            @include tablet{
+                padding: 0 1.5rem 0 0;
+                flex: 1;
+            }
+        }
+
+        &--submit{
+            @include tablet{
+                flex: 0 0 9.75rem;
+            }
+
+            @include desktop{
+                flex: 0 0 9.25rem;
+            }
         }
     }
 
@@ -39,28 +57,6 @@
         }
     }
 
-    &__item{
-        &--comment{
-            margin-bottom: 1rem;
-            @include tablet{
-                flex: 1;
-                margin-right: 1.5rem;
-                margin-bottom: 0;
-            }
-        }
-
-        &--submit{
-            
-            @include tablet{
-                flex: 0 0 9.75rem;
-            }
-
-            @include desktop{
-                flex: 0 0 9.25rem;
-            }
-        }
-    }
-
     &__label{
         @include fonts.labelsbuttons;
         color: colors.$primary-gray;
@@ -70,12 +66,11 @@
         background-color: colors.$secondary-white;
         border: 1px solid colors.$secondary-gray;
         @include mixins.rounded-corners();
-        padding-top: 0.6875rem;
-        padding-left: 0.6875rem;
+        padding: 0.6875rem 0 0 0.6875rem;
         width: 100%;
         height: 6rem;
-        display: block;
         resize: none;
+        display: block;
         
         @include tablet{
             padding-left: 1rem;
@@ -95,12 +90,4 @@
             border-color: colors.$error-color;
         }
     }
-
-    &__form-submit{
-        align-self: flex-end;
-    }
-
-    // &__error{
-    //     color: colors.$error-color;
-    // }
 }
