--- a/src/components/VideoCard/VideoCard.scss
+++ b/src/components/VideoCard/VideoCard.scss
@@ -1,4 +1,5 @@
 @use '../../styles/partials/breakpoints' as *;
+@use '../../styles/partials/colors';
 @use '../../styles/partials/mixins';
 
 .video-card{
@@ -14,13 +15,27 @@
 
     &__thumbnail{
         object-fit: cover;
+        overflow: hidden;
         @include mixins.rounded-corners();
         margin-right: 1rem;
+        position: relative;
         flex-shrink: 0;
         width: 6.25rem;
         
         @include tablet{
             width: 6.875rem;    
+        }
+
+        /// Broken or missing images will display an empty container with a mercury background
+        &::after{
+            content: ' ';
+            background-color: colors.$secondary-gray;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            display: block;    
         }
     }
 
@@ -30,9 +45,5 @@
 
     &__title{
         font-weight: 600;
-    }
-
-    &__channel{
-
     }
 }
