--- a/src/components/VideoPage/VideoPage.scss
+++ b/src/components/VideoPage/VideoPage.scss
@@ -22,7 +22,7 @@
         }
     }
 
-    &__sub-container{
+    &__container{
         padding-top: 1rem;
 
         @include tablet{
@@ -33,14 +33,14 @@
             padding-top: 1.875rem;
         }
 
-        &:first-child{
+        &--video-details{
             @include desktop{
                 border-right: 1px solid colors.$secondary-gray;
                 max-width: 68.1%;
             }
         }
-
-        &:nth-child(2){
+        
+        &--next-videos{
             @include desktop{
                 padding-left: 1.4375rem;
             }
