--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,6 @@
 @use './styles/partials/colors';
 @use './styles/partials/fonts';
+@use './styles/partials/resets';
 
 body{
     color: colors.$primary-black;
