--- a/src/components/VideoPage/VideoPage.scss
+++ b/src/components/VideoPage/VideoPage.scss
@@ -1,14 +1,15 @@
-@use '../../styles/partials/resets';
 @use '../../styles/partials/breakpoints' as *;
-@use '../../styles/partials/fonts';
-@use '../../styles/partials/units';
 @use '../../styles/partials/colors';
+@use '../../styles/partials/fonts';
+@use '../../styles/partials/mixins';
+@use '../../styles/partials/units';
+
 
 .bottom-section{
-    padding: 0 1rem 1rem;
+    padding: 0 1rem 0rem;
 
     @include tablet{
-        padding: 0 2.25rem 1.75rem 2.375rem;
+        padding: 0 2.25rem 0 2.375rem;
     }
     
     &__content{
@@ -35,7 +36,7 @@
 
         &--video-details{
             @include desktop{
-                border-right: 1px solid colors.$secondary-gray;
+                @include mixins.divider(right);
                 max-width: 68.1%;
             }
         }
