add animations to video cards and logo

--- a/src/components/SearchBar/SearchBar.scss
+++ b/src/components/SearchBar/SearchBar.scss
@@ -25,6 +25,7 @@
 
     &__field{
         font-size: 0.75rem;
+        border: 1px solid colors.$secondary-gray;
         background-color: colors.$secondary-white;
         border: 1px solid colors.$secondary-gray;
         @include mixins.rounded-corners();
@@ -37,8 +38,13 @@
             height: 2.5rem;
         }
 
+        &:focus{
+            border-color: colors.$primary-blue;
+            outline: none; //Chrome adds a thick outline by default
+        }
+
         &::placeholder{
-            color: colors.$secondary-black;
+            color: colors.$primary-black;
         }
     }
 }
