--- a/src/components/Logo/Logo.scss
+++ b/src/components/Logo/Logo.scss
@@ -5,12 +5,20 @@
     max-height: 1.5625rem;
     @include mixins.flexbox(center,center);
 
+    &:hover &__icon-container{
+        transform: scale(1.15,1.15);
+    }
+    &:hover &__icon{
+        transform: rotate(360deg);
+    }
+
     &__icon-container{
         background-color: colors.$primary-blue;
         border-radius: 0.25rem / 0.5rem;
         position: relative;
         width: 2rem;
         height: 1.5rem;
+        transition: all 0.4s ease;
     }
 
     &__icon{
@@ -21,6 +29,7 @@
         bottom: 0;
         left: 0;
         width: 0.625rem;
+        transition: all 0.4s ease;
     }
 
     &__title{
@@ -28,4 +37,6 @@
         font-weight: 600;
         margin: 0.3125rem 0.5rem 0 0.375rem;
     }
+
+    
 }
