--- a/src/components/NextVideos/NextVideos.scss
+++ b/src/components/NextVideos/NextVideos.scss
@@ -8,10 +8,11 @@
     &__title{
         @include fonts.subheader;
         color: colors.$primary-gray;
-        margin-bottom: 0.875rem;
+        padding-left: 0.25rem;
+        margin-bottom: 0.625rem;
 
         @include tablet-only{
-            margin-bottom: 1.375rem;
+            margin-bottom: 1.125rem
         }
     }
 }
