--- a/src/components/VideoCard/VideoCard.scss
+++ b/src/components/VideoCard/VideoCard.scss
@@ -3,14 +3,20 @@
 @use '../../styles/partials/mixins';
 
 .video-card{
-    margin-bottom: 0.75rem;
-    height: 3.75rem;
+    padding: 0.25rem;
+    margin-bottom: 0.25rem;
+    height: 4.25rem;
     display: flex;
     cursor: pointer;
+    transition: box-shadow 0.4s ease-out;
 
     @include tablet{
-        margin-bottom: 1.5rem;
-        height: 4.0625rem;
+        margin-bottom: 1rem;
+        height: 4.5625rem;
+    }
+
+    &:hover{
+        box-shadow: 3px 3px 10px 1px rgba(0,0,0,0.5);
     }
 
     &__thumbnail{
