Standardize code spacing, create TimestampLabel element, apply small corrections to fonts and padding

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,8 @@
-@use './styles/partials/colors';
-@use './styles/partials/fonts';
-@use './styles/partials/resets';
+@use "./styles/partials/colors";
+@use "./styles/partials/fonts";
+@use "./styles/partials/resets";
 
-body{
+body {
     color: colors.$primary-black;
     @include fonts.body;
 }
