Standardize code spacing, create TimestampLabel element, apply small corrections to fonts and padding (2/2)

--- a/src/components/CommentsSection/CommentsSection.scss
+++ b/src/components/CommentsSection/CommentsSection.scss
@@ -1,16 +1,15 @@
-@use '../../styles/partials/breakpoints' as *;
+@use "../../styles/partials/breakpoints" as *;
 
-.comments-section{
-
-    @include tablet{
+.comments-section {
+    @include tablet {
         margin-top: 1rem;
     }
 
-    @include desktop{
+    @include desktop {
         margin-top: 2rem;
     }
 
-    &__count{
+    &__count {
         margin-bottom: 1rem;
     }
 }
