--- a/src/styles/partials/_colors.scss
+++ b/src/styles/partials/_colors.scss
@@ -1,18 +1,18 @@
 /// BrainFlix-Black
-$primary-black: #323232; 
+$primary-black: #323232;
 /// BrainFlix-Blue
-$primary-blue: #0095FF;
+$primary-blue: #0095ff;
 /// Silver
-$primary-gray: #AFAFAF;
+$primary-gray: #afafaf;
 /// White
-$primary-white: #FFFFFF;
+$primary-white: #ffffff;
 /// BrainFlix-DarkBlack
 $secondary-black: #000000;
 /// BrainFlix-DarkBlue
-$secondary-blue: #0065AD;
+$secondary-blue: #0065ad;
 /// Mercury
-$secondary-gray: #E1E1E1;
+$secondary-gray: #e1e1e1;
 /// Alabaster
-$secondary-white: #FAFAFA;
+$secondary-white: #fafafa;
 
-$error-color: #D22D2D;
+$error-color: #d22d2d;
