--- a/src/components/CtaButton/CtaButton.scss
+++ b/src/components/CtaButton/CtaButton.scss
@@ -1,10 +1,10 @@
-@use '../../styles/partials/breakpoints' as *;
-@use '../../styles/partials/colors';
-@use '../../styles/partials/fonts';
-@use '../../styles/partials/mixins';
+@use "../../styles/partials/breakpoints" as *;
+@use "../../styles/partials/colors";
+@use "../../styles/partials/fonts";
+@use "../../styles/partials/mixins";
 
-.cta-button{
-    @include fonts.labelsbuttons; 
+.cta-button {
+    @include fonts.labelsbuttons;
     color: colors.$primary-white;
     background-color: colors.$primary-blue;
     border: none;
@@ -14,11 +14,11 @@
     height: 2.5rem;
     cursor: pointer;
 
-    &:hover{
+    &:hover {
         background-color: colors.$secondary-blue;
     }
 
-    &__icon{
+    &__icon {
         margin: auto;
         position: absolute;
         top: 0;
