--- a/src/components/Logo/Logo.scss
+++ b/src/components/Logo/Logo.scss
@@ -1,18 +1,18 @@
-@use '../../styles/partials/colors';
-@use '../../styles/partials/mixins';
+@use "../../styles/partials/colors";
+@use "../../styles/partials/mixins";
 
-.logo{
+.logo {
     max-height: 1.5625rem;
-    @include mixins.flexbox(center,center);
+    @include mixins.flexbox(center, center);
 
-    &:hover &__icon-container{
-        transform: scale(1.15,1.15);
+    &:hover &__icon-container {
+        transform: scale(1.15, 1.15);
     }
-    &:hover &__icon{
+    &:hover &__icon {
         transform: rotate(360deg);
     }
 
-    &__icon-container{
+    &__icon-container {
         background-color: colors.$primary-blue;
         border-radius: 0.25rem / 0.5rem;
         position: relative;
@@ -21,7 +21,7 @@
         transition: all 0.4s ease;
     }
 
-    &__icon{
+    &__icon {
         margin: auto;
         position: absolute;
         top: 0;
@@ -32,11 +32,9 @@
         transition: all 0.4s ease;
     }
 
-    &__title{
+    &__title {
         font-size: 1.0625rem;
         font-weight: 600;
         margin: 0.3125rem 0.5rem 0 0.375rem;
     }
-
-    
 }
