--- a/src/components/Timestamp/TimestampLabel.scss
+++ b/src/components/Timestamp/TimestampLabel.scss
@@ -11,15 +11,19 @@
         background-color: colors.$secondary-black;
         opacity: 0;
         @include mixins.rounded-corners;
-        display: none;
-        padding: 0.25rem 0.5rem;
+        visibility: none;
         position: absolute;
+        left: 0;
+        top: -2.5em;
         z-index: 99;
+        max-width: 0;
         transition: all 0.4s ease;
     }
 
     &:hover &__tooltip {
+        visibility: visible;
         opacity: 1;
-        display: block;
+        padding: 0.25rem 0.5rem;
+        max-width: 150%;
     }
 }
