--- a/src/components/VideoCard/VideoCard.scss
+++ b/src/components/VideoCard/VideoCard.scss
@@ -1,55 +1,57 @@
-@use '../../styles/partials/breakpoints' as *;
-@use '../../styles/partials/colors';
-@use '../../styles/partials/mixins';
+@use "../../styles/partials/breakpoints" as *;
+@use "../../styles/partials/colors";
+@use "../../styles/partials/mixins";
 
-.video-card{
+.video-card {
     padding: 0.25rem;
     margin-bottom: 0.25rem;
     height: 4.25rem;
     display: flex;
     cursor: pointer;
-    transition: box-shadow 0.4s ease-out;
+    transition-property: box-shadow, transform;
+    transition: 0.4s ease-out;
 
-    @include tablet{
+    @include tablet {
         margin-bottom: 1rem;
         height: 4.5625rem;
     }
 
-    &:hover{
-        box-shadow: 3px 3px 10px 1px rgba(0,0,0,0.5);
+    &:hover {
+        box-shadow: 3px 3px 10px 1px rgba(0, 0, 0, 0.5);
+        transform: translate(0.25rem, 0);
     }
 
-    &__thumbnail{
+    &__thumbnail {
         object-fit: cover;
         overflow: hidden;
-        @include mixins.rounded-corners();
+        @include mixins.rounded-corners;
         margin-right: 1rem;
         position: relative;
         flex-shrink: 0;
         width: 6.25rem;
-        
-        @include tablet{
-            width: 6.875rem;    
+
+        @include tablet {
+            width: 6.875rem;
         }
 
         /// Broken or missing images will display an empty container with a mercury background
-        &::after{
-            content: ' ';
+        &::after {
+            content: " ";
             background-color: colors.$secondary-gray;
             position: absolute;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            display: block;    
+            display: block;
         }
     }
 
-    &__info{
-        @include mixins.flexbox(space-between,$direction: column);
+    &__info {
+        @include mixins.flexbox(space-between, $direction: column);
     }
 
-    &__title{
+    &__title {
         font-weight: 600;
     }
 }
