--- a/src/components/VideoInfo/VideoInfo.scss
+++ b/src/components/VideoInfo/VideoInfo.scss
@@ -1,96 +1,92 @@
-@use '../../styles/partials/breakpoints' as *;
-@use '../../styles/partials/fonts';
-@use '../../styles/partials/mixins';
-@use '../../styles/partials/colors';
+@use "../../styles/partials/breakpoints" as *;
+@use "../../styles/partials/fonts";
+@use "../../styles/partials/mixins";
+@use "../../styles/partials/colors";
 
-
-
-.video-info{
-    &__title{
+.video-info {
+    &__title {
         @include fonts.pageheader;
         @include mixins.divider;
         padding: 0.125rem 0 0.875rem;
 
-        @include tablet{
+        @include tablet {
             border: none;
             padding-bottom: 0;
         }
     }
 
-    &__item{
+    &__item {
         color: colors.$primary-gray;
         margin-bottom: 0.75rem;
         flex-basis: 100%;
 
-        @include tablet{
+        @include tablet {
             font-size: 0.75rem;
             margin-bottom: 0.25rem;
             flex-basis: auto;
         }
 
-        &--strong{
+        &--strong {
             font-weight: 600;
             font-size: 0.875rem;
             color: colors.$secondary-black;
-            
-            @include tablet{
+
+            @include tablet {
                 font-size: 0.9688rem;
             }
         }
 
-        &--left{
-            @include tablet{
+        &--left {
+            @include tablet {
                 margin-right: 2rem;
             }
-
         }
 
-        &--right{
-            @include tablet{
+        &--right {
+            @include tablet {
                 margin-left: 2rem;
             }
-            @include desktop{
+            @include desktop {
                 margin-left: 1.5rem;
             }
         }
-        
     }
 
-    &__icon{
+    &__icon {
         margin-right: 0.5rem;
         vertical-align: text-bottom;
     }
 
-    &__bottom-row{
+    &__bottom-row {
         padding-top: 1rem;
         @include mixins.flexbox(space-between);
         @include mixins.divider;
-        
-        @include tablet{
+
+        @include tablet {
             padding-top: 0.5rem;
         }
 
-        @include desktop{
+        @include desktop {
             padding-right: 1.375rem;
         }
     }
 
-    &__container{
+    &__container {
         @include mixins.flexbox($wrap: wrap);
         flex: 0 47%;
-        @include tablet{
+        @include tablet {
             flex: 0 auto;
         }
     }
 
-    &__description{
+    &__description {
         padding: 1rem 0 1rem;
-        
-        @include tablet{
+
+        @include tablet {
             padding-top: 1.5rem;
         }
 
-        @include desktop{
+        @include desktop {
             padding-right: 1.375rem;
         }
     }
