--- a/src/components/VideoPlayer/VideoPlayer.scss
+++ b/src/components/VideoPlayer/VideoPlayer.scss
@@ -1,37 +1,29 @@
-@use '../../styles/partials/breakpoints' as *;
-@use '../../styles/partials/mixins';
-@use '../../styles/partials/colors';
+@use "../../styles/partials/breakpoints" as *;
+@use "../../styles/partials/mixins";
+@use "../../styles/partials/colors";
 
-// Video Layout
-//  - Player
-//      - Mobile: 
-//          - Height: 181px or 56.5625vw
-//      - Tablet:
-//          - Height: 394px 51.3020vw
-//      - Desktop:
-//          - Height: 479px 37.
-// 
-
-.video-player{
+.video-player {
     background-color: colors.$secondary-black;
     @include mixins.flexbox(center);
+    overflow-x: hidden;
 
-    @include tablet{
+    @include tablet {
         padding-left: 2.25rem;
         padding-right: 2.25rem;
     }
 
-    &__video{
+    &__video {
         background-color: colors.$primary-black;
         margin: auto;
+        max-width: 102%;
         display: block;
-        max-width: 100%;
 
-        @include tablet{
+        @include tablet {
+            max-width: 52.5rem;
             height: 24.625rem;
         }
-        
-        @include desktop{
+
+        @include desktop {
             height: 30rem;
         }
     }
