--- a/src/styles/partials/_units.scss
+++ b/src/styles/partials/_units.scss
@@ -9,12 +9,4 @@ $margins-mobile: 1rem;
 $columns-mobile: auto;
 $gutters-mobile: 1rem;
 
-$maxWidth: 63.75rem;
-
-$pad-before-headlines-mobile: 1.5rem;
-$pad-after-headlines-mobile: 1rem;
-$pad-between-components-mobile: 1rem;
-
-$pad-before-headlines-tablet: 3rem;
-$pad-after-headlines-tablet:  1.5rem;
-$pad-between-components-tablet: 2.25rem;
+$max-width: 63.75rem;
