Apply various quality corrections
-Move @font-faces into separate _typography.scss to prevent duplication
-Redistribute padding sources within video details to simplify design
-Remove duplicate properties

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,7 @@
 @use "./styles/partials/colors";
 @use "./styles/partials/fonts";
 @use "./styles/partials/resets";
+@use "./styles/partials/typography";
 
 body {
     color: colors.$primary-black;
