--- a/src/components/CommentCard/CommentCard.scss
+++ b/src/components/CommentCard/CommentCard.scss
@@ -3,15 +3,14 @@
 @use "../../styles/partials/mixins";
 
 .comment-card {
-    // border-bottom: 1px solid colors.$secondary-gray;
     @include mixins.divider(top);
     @include mixins.flexbox($align-items: flex-start);
     padding-top: 0.75rem;
     padding-bottom: 0.625rem;
 
     @include tablet {
-        padding-top: 1.625rem;
-        padding-bottom: 1.125rem;
+        padding-top: 1.5rem;
+        padding-bottom: 1.375rem;
     }
 
     @include desktop {
@@ -19,32 +18,36 @@
         padding-right: 1.5rem;
     }
 
+    //Containers wrap elements to control spacing and size constraints.
     &__container {
         &--avatar {
             padding-right: 1rem;
+
+            @include tablet {
+                padding-right: 1.25rem;
+            }
 
             @include desktop {
                 padding-right: 2.25rem;
             }
         }
-    }
 
-    &__content {
-        flex-grow: 1;
-        @include mixins.flexbox($wrap: wrap);
+        &--content {
+            flex-grow: 1;
+            @include mixins.flexbox($wrap: wrap);
+        }
     }
 
     &__name {
         font-weight: 600;
         white-space: nowrap;
+        margin-bottom: 0.875rem;
         flex: 1;
         height: 1em;
-        margin-bottom: 0.875rem;
-    }
 
-    &__timestamp {
-        color: colors.$primary-gray;
-        height: 1em;
+        @include tablet {
+            margin-bottom: 0.75rem;
+        }
     }
 
     &__text {
