--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -15,6 +15,7 @@
         @include mixins.flexbox($align-items: center, $wrap: wrap);
     }
 
+    //Containers wrap elements to control spacing and size constraints.
     &__container {
         margin: 0.5rem;
 
@@ -25,6 +26,7 @@
                 margin-right: auto;
                 flex: 0;
             }
+
             @include desktop {
                 margin-left: 0;
             }
@@ -44,6 +46,7 @@
                 flex: 0;
                 order: 2;
             }
+
             @include desktop {
                 margin-right: 0.75rem;
             }
