--- a/src/components/Timestamp/TimestampLabel.scss
+++ b/src/components/Timestamp/TimestampLabel.scss
@@ -18,6 +18,7 @@
         z-index: 99;
         max-width: 0;
         transition: all 0.4s ease;
+        pointer-events: none;
     }
 
     &:hover &__tooltip {
