--- a/src/components/VideoCard/VideoCard.scss
+++ b/src/components/VideoCard/VideoCard.scss
@@ -8,8 +8,7 @@
     height: 4.25rem;
     display: flex;
     cursor: pointer;
-    transition-property: box-shadow, transform;
-    transition: 0.4s ease-out;
+    transition: box-shadow 0.4s ease-out, transform 0.4s ease-out;
 
     @include tablet {
         margin-bottom: 1rem;
@@ -53,5 +52,9 @@
 
     &__title {
         font-weight: 600;
+
+        @include tablet {
+            line-height: 1.125rem;
+        }
     }
 }
